force-app/main/default/objects/Medical_Record__c/fields/Assigned_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Doctor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Medical Records</relationshipLabel>
    <relationshipName>Doctor_Medical_Records</relationshipName>
    <type>Lookup</type>
</CustomField>