force-app/main/default/objects/Medical_Record__c/fields/Follow_Up_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Frequency__c</fullName>
    <label>Follow Up Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Follow_Up_Required__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Follow_Up_Frequency</valueSetName>
    </valueSet>
</CustomField>