force-app/main/default/objects/Medical_Record__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <label>Follow Up Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>