force-app/main/default/objects/Medical_Record__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Medical Records</relationshipLabel>
    <relationshipName>Patient_Medical_Records</relationshipName>
    <type>Lookup</type>
</CustomField>