force-app/main/default/objects/Medical_Record__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <label>Prescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>