force-app/main/default/objects/Medical_Record__c/fields/Record_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Creation_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Creation Date</label>
    <type>Date</type>
</CustomField>