force-app/main/default/objects/Medical_Record__c/fields/Record_Creation_Time__c.field-meta.xml
<CustomField>
    <fullName>Record_Creation_Time__c</fullName>
    <formula>TIMENOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Creation Time</label>
    <type>Time</type>
</CustomField>